--- a/src/index.css
+++ b/src/index.css
@@ -141,5 +141,18 @@ padding: 3px;
 .homePageLayout{
   height: 600px;
   text-align: center;
-  
+  background-image: url(https://cdn.pixabay.com/photo/2016/03/23/17/33/curtain-1275200_1280.png);
+}
+
+.homeSlayder{
+display: flex;
+justify-content: center;
+margin-top: 50px;
+height: 400px;
+}
+.titleHome{
+  padding-top: 15px;
+  font-size: xx-large;
+  font-family:  Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
 }
