--- a/src/index.css
+++ b/src/index.css
@@ -185,31 +185,29 @@ height: 400px;
   color: white;
 }
 /* Review layout */
-.reviewSection{
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  
-}
+
 .rowReview{
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
 
 }
 .colReview{
-  width:calc(100% / 4);
-  
+  width:calc(100% / 2 -100px);
+  margin: 20px;
+
+}
+.reviewCard{  
   margin: 4px;
-  height: 250px;
+  height: 240px;
   background-image: url(https://cdn.pixabay.com/photo/2015/06/22/23/21/filmklappe-818198_1280.jpg);
   color: white;
   background-size: cover;
+  padding-top: 25px ;
+ 
 }
 /* card review */
 .titleRev{
-  
   height: 50px;
   text-align: center;
   padding: 5px;
@@ -226,4 +224,17 @@ height: 400px;
 .pdt15{
  padding-top: 15px;
 }
+.reviewBotRow{
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
+
+/* form Layout */
+.form{
+  height: 100%;
+background-color: red;
+text-align: center;
+}
